<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_spotify"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/margin_top_first"
        android:layout_gravity="center"
        android:layout_height="@dimen/button_height"
        android:textAllCaps="true"
        android:background="@color/material_orange"
        android:text="@string/spotify_streamer" />
    <Button
        android:id="@+id/button_scores"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        android:layout_height="@dimen/button_height"
        android:textAllCaps="true"
        android:onClick="scoresClick"
        android:background="@color/material_blue"
        android:text="@string/scores_app" />
    <Button
        android:id="@+id/button_library"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        android:layout_height="@dimen/button_height"
        android:textAllCaps="true"
        android:onClick="libraryClick"
        android:background="@color/material_deep_teal_500"
        android:text="@string/library_app" />
    <Button
        android:id="@+id/button_build"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        android:layout_height="@dimen/button_height"
        android:textAllCaps="true"
        android:onClick="buildClick"
        android:background="@color/material_cyan"
        android:text="@string/built_it_bigger" />
    <Button
        android:id="@+id/button_xyz"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        android:layout_height="@dimen/button_height"
        android:textAllCaps="true"
        android:onClick="xyzClick"
        android:background="@color/material_green"
        android:text="@string/xyz_reader" />
    <Button
        android:id="@+id/button_capstone"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_gravity="center"
        android:layout_height="@dimen/button_height"
        android:textAllCaps="true"
        android:onClick="capstoneClick"
        android:textColor="@android:color/white"
        android:background="@color/material_pink"
        android:text="@string/captsone" />
</LinearLayout>
